[package]
name = "pet-cat"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
axum = "0.8.4"
kovi = "0.12.3"
new_mime_guess = "4.0.4"
reqwest = { version = "0.12.20", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
tokio-util = { version = "0.7.15", features = ["io"] }
toml = "0.8.23"
